--- a/resume/Resume-zh.html
+++ b/resume/Resume-zh.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
 
-<link href='https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color: #ffffff; --text-color: #333333; --select-text-bg-color: #B5D6FC; --select-text-font-color: auto; --monospace: "Lucida Console",Consolas,"Courier",monospace; --title-bar-height: 20px; }
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext' rel='stylesheet' type='text/css' /><style type='text/css'>html {overflow-x: initial !important;}:root { --bg-color: #ffffff; --text-color: #333333; --select-text-bg-color: #B5D6FC; --select-text-font-color: auto; --monospace: "Lucida Console",Consolas,"Courier",monospace; --title-bar-height: 20px; }
 .mac-os-11 { --title-bar-height: 28px; }
 html { font-size: 14px; background-color: var(--bg-color); color: var(--text-color); font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; -webkit-font-smoothing: antialiased; }
 h1, h2, h3, h4, h5 { white-space: pre-wrap; }
@@ -219,93 +219,55 @@ mjx-container { break-inside: avoid; }
 .md-alert-text-container::after { content: attr(data-text); text-transform: capitalize; pointer-events: none; margin-right: 1ch; }
 
 
-/* for resume  <-- */
-#write {
-    padding-top: 0px !important;
-    padding-bottom: 20px !important;
-}
-
-content {
-    margin-top: 0px !important;
-    padding-top: 0px !important;
-}
-
-a {
-    color: #000;
-}
-
-h1,
-h2 {
-    border-bottom: 1px solid #eee !important;
-    margin-bottom: 3px !important;
-    padding-bottom: 3px !important;
-}
-
-h2 img {
-    width: 16px !important;
-}
-
-h2 {
-    font-size: 17px !important;
-}
-
-p {
-    margin-bottom: 2px !important;
-    margin-top: 2px !important;
-}
-
-ul {
-    margin-top: 2px !important;
-    margin-bottom: 2px !important;
-}
-
-li p {
-    margin-bottom: 0px !important;
-}
-
-li.md-list-item {
-    line-height: 20px !important;
-}
-
-a {
-    color: #555 !important;
-}
-
-/* for resume --> */
-
 :root {
     --side-bar-bg-color: #fafafa;
     --control-text-color: #777;
 }
 
-@include-when-export url(https://fonts.loli.net/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext);
+@include-when-export url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,700,400&subset=latin,latin-ext);
 
-html {
+/* open-sans-regular - latin-ext_latin */
+  /* open-sans-italic - latin-ext_latin */
+    /* open-sans-700 - latin-ext_latin */
+    /* open-sans-700italic - latin-ext_latin */
+  html {
     font-size: 16px;
+    -webkit-font-smoothing: antialiased;
 }
 
 body {
-    font-family: "Open Sans", "Clear Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Open Sans","Clear Sans", "Helvetica Neue", Helvetica, Arial, 'Segoe UI Emoji', sans-serif;
     color: rgb(51, 51, 51);
     line-height: 1.6;
 }
 
 #write {
     max-width: 860px;
-    margin: 0 auto;
-    padding: 30px;
+  	margin: 0 auto;
+  	padding: 30px;
     padding-bottom: 100px;
 }
 
-#write>ul:first-child,
-#write>ol:first-child {
+@media only screen and (min-width: 1400px) {
+	#write {
+		max-width: 1024px;
+	}
+}
+
+@media only screen and (min-width: 1800px) {
+	#write {
+		max-width: 1200px;
+	}
+}
+
+#write > ul:first-child,
+#write > ol:first-child{
     margin-top: 30px;
 }
 
 a {
     color: #4183C4;
 }
-
 h1,
 h2,
 h3,
@@ -319,7 +281,6 @@ h6 {
     line-height: 1.4;
     cursor: text;
 }
-
 h1:hover a.anchor,
 h2:hover a.anchor,
 h3:hover a.anchor,
@@ -328,83 +289,84 @@ h5:hover a.anchor,
 h6:hover a.anchor {
     text-decoration: none;
 }
-
 h1 tt,
 h1 code {
     font-size: inherit;
 }
-
 h2 tt,
 h2 code {
     font-size: inherit;
 }
-
 h3 tt,
 h3 code {
     font-size: inherit;
 }
-
 h4 tt,
 h4 code {
     font-size: inherit;
 }
-
 h5 tt,
 h5 code {
     font-size: inherit;
 }
-
 h6 tt,
 h6 code {
     font-size: inherit;
 }
-
 h1 {
-    padding-bottom: .3em;
     font-size: 2.25em;
     line-height: 1.2;
     border-bottom: 1px solid #eee;
 }
-
 h2 {
-    padding-bottom: .3em;
     font-size: 1.75em;
     line-height: 1.225;
     border-bottom: 1px solid #eee;
 }
 
+/*@media print {
+    .typora-export h1,
+    .typora-export h2 {
+        border-bottom: none;
+        padding-bottom: initial;
+    }
+
+    .typora-export h1::after,
+    .typora-export h2::after {
+        content: "";
+        display: block;
+        height: 100px;
+        margin-top: -96px;
+        border-top: 1px solid #eee;
+    }
+}*/
+
 h3 {
     font-size: 1.5em;
     line-height: 1.43;
 }
-
 h4 {
     font-size: 1.25em;
 }
-
 h5 {
     font-size: 1em;
 }
-
 h6 {
-    font-size: 1em;
+   font-size: 1em;
     color: #777;
 }
-
 p,
 blockquote,
 ul,
 ol,
 dl,
-table {
+table{
     margin: 0.8em 0;
 }
-
 li>ol,
 li>ul {
     margin: 0 0;
 }
-
 hr {
     height: 2px;
     padding: 0;
@@ -418,71 +380,57 @@ hr {
 li p.first {
     display: inline-block;
 }
-
 ul,
 ol {
     padding-left: 30px;
 }
-
 ul:first-child,
 ol:first-child {
     margin-top: 0;
 }
-
 ul:last-child,
 ol:last-child {
     margin-bottom: 0;
 }
-
 blockquote {
     border-left: 4px solid #dfe2e5;
     padding: 0 15px;
     color: #777777;
 }
-
 blockquote blockquote {
     padding-right: 0;
 }
-
 table {
     padding: 0;
     word-break: initial;
 }
-
 table tr {
-    border-top: 1px solid #dfe2e5;
+    border: 1px solid #dfe2e5;
     margin: 0;
     padding: 0;
 }
-
 table tr:nth-child(2n),
 thead {
     background-color: #f8f8f8;
 }
-
-table tr th {
+table th {
     font-weight: bold;
     border: 1px solid #dfe2e5;
     border-bottom: 0;
-    text-align: left;
     margin: 0;
     padding: 6px 13px;
 }
-
-table tr td {
+table td {
     border: 1px solid #dfe2e5;
-    text-align: left;
     margin: 0;
     padding: 6px 13px;
 }
-
-table tr th:first-child,
-table tr td:first-child {
+table th:first-child,
+table td:first-child {
     margin-top: 0;
 }
-
-table tr th:last-child,
-table tr td:last-child {
+table th:last-child,
+table td:last-child {
     margin-bottom: 0;
 }
 
@@ -491,7 +439,7 @@ table tr td:last-child {
 }
 
 .code-tooltip {
-    box-shadow: 0 1px 1px 0 rgba(0, 28, 36, .3);
+    box-shadow: 0 1px 1px 0 rgba(0,28,36,.3);
     border-top: 1px solid #eef2f2;
 }
 
@@ -519,31 +467,25 @@ code {
 }
 
 
-.md-task-list-item>input {
-    margin-left: -1.3em;
+.md-task-list-item > input {
+  margin-left: -1.3em;
 }
 
 @media print {
     html {
         font-size: 13px;
     }
-
-    table,
     pre {
         page-break-inside: avoid;
-    }
-
-    pre {
         word-wrap: break-word;
     }
 }
 
 .md-fences {
-    background-color: #f8f8f8;
+	background-color: #f8f8f8;
 }
-
 #write pre.md-meta-block {
-    padding: 1rem;
+	padding: 1rem;
     font-size: 85%;
     line-height: 1.45;
     background-color: #f7f7f7;
@@ -554,33 +496,29 @@ code {
 }
 
 .mathjax-block>.code-tooltip {
-    bottom: .375rem;
+	bottom: .375rem;
 }
 
 .md-mathjax-midline {
     background: #fafafa;
 }
 
-#write>h3.md-focus:before {
-    left: -1.5625rem;
-    top: .375rem;
+#write>h3.md-focus:before{
+	left: -1.5625rem;
+	top: .375rem;
 }
-
-#write>h4.md-focus:before {
-    left: -1.5625rem;
-    top: .285714286rem;
+#write>h4.md-focus:before{
+	left: -1.5625rem;
+	top: .285714286rem;
 }
-
-#write>h5.md-focus:before {
-    left: -1.5625rem;
-    top: .285714286rem;
+#write>h5.md-focus:before{
+	left: -1.5625rem;
+	top: .285714286rem;
 }
-
-#write>h6.md-focus:before {
-    left: -1.5625rem;
-    top: .285714286rem;
+#write>h6.md-focus:before{
+	left: -1.5625rem;
+	top: .285714286rem;
 }
-
 .md-image>.md-meta {
     /*border: 1px solid #ddd;*/
     border-radius: 3px;
@@ -594,9 +532,9 @@ code {
     opacity: 1;
 }
 
-.md-toc {
-    margin-top: 20px;
-    padding-bottom: 20px;
+.md-toc { 
+    margin-top:20px;
+    padding-bottom:20px;
 }
 
 .sidebar-tabs {
@@ -620,15 +558,12 @@ code {
     border-left-color: rgba(85, 85, 85, 0.12);
 }
 
-header,
-.context-menu,
-.megamenu-content,
-footer {
+header, .context-menu, .megamenu-content, footer{
     font-family: "Segoe UI", "Arial", sans-serif;
 }
 
 .file-node-content:hover .file-node-icon,
-.file-node-content:hover .file-node-open-state {
+.file-node-content:hover .file-node-open-state{
     visibility: visible;
 }
 
@@ -637,13 +572,17 @@ footer {
     background-color: var(--side-bar-bg-color);
 }
 
+.mac-os #write{
+    caret-color: AccentColor;
+}
+
 .md-lang {
     color: #b4654d;
 }
 
-.html-for-mac .context-menu {
+/*.html-for-mac {
     --item-hover-bg-color: #E6F0FE;
-}
+}*/
 
 #md-notification .btn {
     border: 0;
@@ -651,7 +590,23 @@ footer {
 
 .dropdown-menu .divider {
     border-color: #e5e5e5;
+    opacity: 0.4;
 }
+
+.ty-preferences .window-content {
+    background-color: #fafafa;
+}
+
+.ty-preferences .nav-group-item.active {
+    color: white;
+    background: #999;
+}
+
+.menu-item-container a.menu-style-btn {
+    background-color: #f5f8fa;
+    background-image: linear-gradient( 180deg , hsla(0, 0%, 100%, 0.8), hsla(0, 0%, 100%, 0)); 
+}
+
 
  @media print { @page {margin: 0 0 0 0;} body.typora-export {padding-left: 0; padding-right: 0;} #write {padding:0;}}
 </style><title>Resume-zh</title>
@@ -685,6 +640,6 @@ footer {
              <a href="https://www.haozheli.com">网站</a>
          </span>
      </div>
- </center><h2 id='概述'><img src="assets/info-circle-solid.svg" width="30px"><span> 概述</span></h2><ul><li><p><span>男，2004年生</span></p></li><li><p><span>就读于伊利诺伊大学香槟分校</span></p></li><li><p><span>熟练使用C++，Python，Java与大模型</span></p></li><li><p><span>具有一定全栈开发经验</span></p></li><li><p><span>10K+ 粉丝视频博主</span></p><p>&nbsp;</p></li></ul><h2 id='教育经历'><img src="assets/graduation-cap-solid.svg" width="30px"><span> 教育经历</span></h2><ul><li><p><span>BS，</span><strong><span>伊利诺伊大学香槟分校</span></strong><span>，计算机科学与音乐（2022 - 2026 预计）</span></p><ul><li><p><span>绩点：3.98</span></p></li><li><p><span>伊利诺伊大学院长清单</span></p></li></ul><p>&nbsp;</p></li></ul><h2 id='工作经历'><img src="assets/briefcase-solid.svg" width="30px"><span> 工作经历</span></h2><ul><li><p><strong><span>人工智能提示工程实习</span></strong><span>，</span><a href='https://rpggo.ai'><span>RPGGO</span></a></p><p><span>2024.1 -</span></p><ul><li><p><span>使用大语言模型生成实时游戏背景音乐与音效</span></p></li><li><p><span>构造基于人工智能的游戏的工作流程</span></p></li></ul></li><li><p><strong><span>课程助理</span></strong><span>，</span><a href='https://illinois.edu'><span>伊利诺伊大学香槟分校</span></a></p><p><span>2023.1 - 2023.5, 2024.1 -</span></p><ul><li><p><span>伊利诺伊大学CS 124，计算机科学导论的课程助理</span></p></li><li><p><span>协助老师在课程网站上录制讲座导言、预习内容</span></p></li><li><p><span>在线解答同学关于课程内容、机器项目等的疑问</span></p></li></ul></li><li><p><strong><span>内容贡献者</span></strong><span>，</span><a href='https://znotes.org'><span>ZNotes</span></a></p><p><span>12/2021 - 04/2022</span></p><ul><li><p><span>总结复习笔记帮助学生复习A-Level物理</span></p></li><li><p><span>编写章节A2 天文物理，量子物理以及原子物理章节</span></p></li><li><p><span>修订章节电磁学与热力学</span></p><p>&nbsp;</p></li></ul></li></ul><h2 id='项目经历'><img src="assets/project-diagram-solid.svg" width="30px"><span> 项目经历</span></h2><ul><li><p><strong><span>个人网站</span></strong></p><p><span>项目链接：</span><a href='https://www.haozheli.com'><span>haozheli.com</span></a></p><ul><li><p><span>在课余时间我自学网页前端知识搭建了我的个人网站</span></p></li><li><p><span>使用了HTML, JavaScript以及CSS</span></p></li></ul></li><li><p><strong><span>在线文本检测器</span></strong></p><p><span>项目链接：</span><a href='http://detect.haozheli.com'><span>detect.haozheli.com</span></a></p><ul><li><p><span>在线比对两段文本的相似度</span></p></li><li><p><span>基于筛子算法以及最小哈希值比对</span></p></li><li><p><span>使用JavaScript在本地计算</span></p></li></ul></li><li><p><strong><span>Fit2Video</span></strong></p><p><span>项目链接：</span><a href='http://github.com/Haozhe-Li/fit2video'><span>github.com/Haozhe-Li/fit2video</span></a></p><ul><li><p><span>将记录运动数据的.fit文件转换为视频图层</span></p></li><li><p><span>方便跑步爱好者、视频博主添加跑步数据图层</span></p></li><li><p><span>使用Python, Pandas以及FFmpeg</span></p><p>&nbsp;</p></li></ul></li></ul><h2 id='技能清单'><img src="assets/tools-solid.svg" width="30px"><span> 技能清单</span></h2><ul><li><p><span>★★★ 音视频处理</span></p></li><li><p><span>★★☆ C++, Python, Java</span></p></li><li><p><span>★★☆ 大模型，提示工程，微调</span></p></li><li><p><span>★☆☆ 全栈开发（HTML, JS, Flask）</span></p></li><li><p><span>★☆☆ Pandas, PyTorch</span></p></li><li><p><span>★☆☆ 数字信号处理</span></p></li></ul><p>&nbsp;</p><h2 id='兴趣爱好'><img src="assets/heart-solid.svg" width="30px"><span> 兴趣爱好</span></h2><p><span>视频创作者，10K+粉丝的视频博主，大提琴与钢琴乐手，马拉松爱好者</span></p></div></div>
+ </center><h2 id='img-srcassetsinfo-circle-solidsvg-width30px-概述'><img src="assets/info-circle-solid.svg" width="30px"><span> 概述</span></h2><ul><li><p><span>男，2004年生</span></p></li><li><p><span>就读于伊利诺伊大学香槟分校</span></p></li><li><p><span>熟练使用C++，Python，Java与大模型</span></p></li><li><p><span>具有一定全栈开发经验</span></p></li><li><p><span>10K+ 粉丝视频博主</span></p><p>&nbsp;</p></li></ul><h2 id='教育经历'><img src="assets/graduation-cap-solid.svg" width="30px"><span> 教育经历</span></h2><ul><li><p><span>BS，</span><strong><span>伊利诺伊大学香槟分校</span></strong><span>，计算机科学与音乐（2022 - 2026 预计）</span></p><ul><li><p><span>绩点：3.98</span></p></li><li><p><span>自入学来一直为</span><strong><span>伊利诺伊大学院长清单</span></strong></p></li></ul><p>&nbsp;</p></li></ul><h2 id='工作经历'><img src="assets/briefcase-solid.svg" width="30px"><span> 工作经历</span></h2><ul><li><p><strong><span>人工智能提示工程实习</span></strong><span>，</span><a href='https://rpggo.ai'><span>RPGGO</span></a></p><p><span>2024.1 -</span></p><ul><li><p><span>使用GPT以及Musicgen模型为游戏生成定制化背景音乐</span></p></li><li><p><span>根据游戏主题以及场景微调音乐生成</span></p></li></ul></li><li><p><strong><span>课程助理</span></strong><span>，</span><a href='https://illinois.edu'><span>伊利诺伊大学香槟分校</span></a></p><p><span>2023.1 - 2023.5, 2024.1 -</span></p><ul><li><p><span>伊利诺伊大学CS 124，计算机科学导论的课程助理</span></p></li><li><p><span>协助老师在课程网站上录制讲座导言、预习内容</span></p></li><li><p><span>在线解答同学关于课程内容、机器项目等的疑问</span></p></li></ul></li><li><p><strong><span>内容贡献者</span></strong><span>，</span><a href='https://znotes.org'><span>ZNotes</span></a></p><p><span>12/2021 - 04/2022</span></p><ul><li><p><span>总结复习笔记帮助学生复习A-Level物理</span></p></li><li><p><span>编写章节A2 天文物理，量子物理以及原子物理章节</span></p></li><li><p><span>修订章节电磁学与热力学</span></p><p>&nbsp;</p></li></ul></li></ul><h2 id='项目经历'><img src="assets/project-diagram-solid.svg" width="30px"><span> 项目经历</span></h2><ul><li><p><strong><span>个人网站</span></strong></p><p><span>项目链接：</span><a href='https://www.haozheli.com'><span>haozheli.com</span></a></p><ul><li><p><span>在课余时间我自学网页前端知识搭建了我的个人网站</span></p></li><li><p><span>使用了HTML, JavaScript以及CSS</span></p></li></ul></li><li><p><strong><span>在线文本检测器</span></strong></p><p><span>项目链接：</span><a href='http://detect.haozheli.com'><span>detect.haozheli.com</span></a></p><ul><li><p><span>在线比对两段文本的相似度</span></p></li><li><p><span>基于筛子算法以及最小哈希值比对</span></p></li><li><p><span>使用JavaScript在本地计算</span></p></li></ul></li><li><p><strong><span>Fit2Video</span></strong></p><p><span>项目链接：</span><a href='http://github.com/Haozhe-Li/fit2video'><span>github.com/Haozhe-Li/fit2video</span></a></p><ul><li><p><span>将记录运动数据的.fit文件转换为视频图层</span></p></li><li><p><span>方便跑步爱好者、视频博主添加跑步数据图层</span></p></li><li><p><span>使用Python, Pandas以及FFmpeg</span></p><p>&nbsp;</p></li></ul></li></ul><h2 id='技能清单'><img src="assets/tools-solid.svg" width="30px"><span> 技能清单</span></h2><ul><li><p><span>★★★ 音视频处理</span></p></li><li><p><span>★★☆ C++, Python, Java</span></p></li><li><p><span>★★☆ 大模型，提示工程，微调</span></p></li><li><p><span>★☆☆ 全栈开发（HTML, JS, Flask）</span></p></li><li><p><span>★☆☆ Pandas, PyTorch</span></p></li><li><p><span>★☆☆ 数字信号处理</span></p></li></ul><p>&nbsp;</p><h2 id='兴趣爱好'><img src="assets/heart-solid.svg" width="30px"><span> 兴趣爱好</span></h2><p><span>视频创作者，10K+粉丝的视频博主，大提琴与钢琴乐手，马拉松爱好者</span></p></div></div>
 </body>
 </html>
